k8s/apps/communications/jitsi/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: jvb
  namespace: jitsi
  labels:
    app.kubernetes.io/name: jitsi
    app.kubernetes.io/component: jvb
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/component: jvb
  ports:
    - name: jvb-udp
      port: 10000
      targetPort: 10000
      protocol: UDP
