k8s/apps/communications/jitsi/auth-deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi-openid
  namespace: jitsi
  labels:
    app.kubernetes.io/name: jitsi-openid
    app.kubernetes.io/instance: jitsi-openid
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jitsi-openid
      app.kubernetes.io/instance: jitsi-openid
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jitsi-openid
        app.kubernetes.io/instance: jitsi-openid
    spec:
      containers:
        - name: jitsi-openid
          image: ghcr.io/marcelcoding/jitsi-openid:2.0.13
          ports:
            - name: http
              containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jitsi-openid
  namespace: jitsi
  labels:
    app.kubernetes.io/name: jitsi-openid
    app.kubernetes.io/instance: jitsi-openid
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jitsi-openid
    app.kubernetes.io/instance: jitsi-openid
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jitsi-openid
  namespace: jitsi
  labels:
    app.kubernetes.io/name: jitsi-openid
    app.kubernetes.io/instance: jitsi-openid
spec:
  ingressClassName: ingress-external-traefik
  rules:
    - host: jitsi-auth.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jitsi-openid
                port:
                  name: http
